biskit/src/main/java/com/example/biskit/errors/StockInsuficienteException.java
package com.example.biskit.errors;

public class StockInsuficienteException extends RuntimeException {

    public StockInsuficienteException(String message) {
        super(message);
    }
}